[package]
name = "slog-mock"
description = "Mock crate for slog to compile out all logging"
repository = "https://github.com/ammongit/slog-mock"
readme = "README.md"
license = "MIT"
keywords = ["slog", "mock"]
categories = []
exclude = [".gitignore", ".github"]

version = "0.4.0"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # Cargo edition

[workspace]
members = ["slog-mock-proc-macros"]

[dependencies]
slog-mock-proc-macros = "0.4"
